--- a/Labo04/GrpcGreeter/GrpcGreeter/GrpcGreeter.csproj
+++ b/Labo04/GrpcGreeter/GrpcGreeter/GrpcGreeter.csproj
@@ -12,4 +12,6 @@
     <PackageReference Include="Grpc.AspNetCore" Version="2.27.0" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
