--- a/Labo05/WcfServiceClient/App.config
+++ b/Labo05/WcfServiceClient/App.config
@@ -6,7 +6,7 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ISpaceX" />
+                <binding name="BasicHttpBinding_IDbAction" />
             </basicHttpBinding>
             <customBinding>
                 <binding name="mojEndpoint3">
@@ -29,7 +29,7 @@
                 </binding>
             </customBinding>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_ISpaceX">
+                <binding name="WSHttpBinding_IDbAction">
                     <security mode="None" />
                 </binding>
             </wsHttpBinding>
@@ -37,17 +37,17 @@
         <client>
             <endpoint address="http://25.44.16.181:11115/mojkalkulator/endpoint3"
                 binding="customBinding" bindingConfiguration="mojEndpoint3"
-                contract="ServiceReference1.ISpaceX" name="mojEndpoint3">
+                contract="ServiceReference1.IDbAction" name="mojEndpoint3">
                 <identity>
                     <userPrincipalName value="ELENTIYA\Elentiya" />
                 </identity>
             </endpoint>
             <endpoint address="http://25.44.16.181:11115/mojkalkulator/endpoint1"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISpaceX"
-                contract="ServiceReference1.ISpaceX" name="WSHttpBinding_ISpaceX" />
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IDbAction"
+                contract="ServiceReference1.IDbAction" name="WSHttpBinding_IDbAction" />
             <endpoint address="http://25.44.16.181:11115/mojkalkulator/endpoint2"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISpaceX"
-                contract="ServiceReference1.ISpaceX" name="BasicHttpBinding_ISpaceX" />
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDbAction"
+                contract="ServiceReference1.IDbAction" name="BasicHttpBinding_IDbAction" />
         </client>
     </system.serviceModel>
 </configuration>
