--- a/Labo05/WcfServiceContract/WcfServiceContract/WcfServiceContract.csproj
+++ b/Labo05/WcfServiceContract/WcfServiceContract/WcfServiceContract.csproj
@@ -51,9 +51,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ISpaceX.cs" />
+    <Compile Include="IDbAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpaceX.cs" />
+    <Compile Include="DbAction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
